fixed: blurred image due to background percentage sizing

--- a/src/apps/active-preview/Preview.less
+++ b/src/apps/active-preview/Preview.less
@@ -74,7 +74,7 @@
 
   .Preview {
     //Height - TopBar - iframe(border-top):
-    height: calc(100vh - 58px - 16px;);
+    height: calc(100vh - 72px;);
 
     .center {
       display: flex;
@@ -98,7 +98,6 @@
         background-image: url("https://storage.googleapis.com/assets-zesty/loading.png");
         background-position: center center;
         background-repeat: no-repeat;
-        background-size: 10%;
       }
 
       // iframe when displayed inside device css
